--- a/client/src/styles/components/_about.scss
+++ b/client/src/styles/components/_about.scss
@@ -1,7 +1,7 @@
 .about-wrapper {
   background: $off-white;
   position: absolute;
-  top: 15%;
+  top: 10.5%;
   bottom: 0;
   right: 0;
   left: 0;
