--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -19,7 +19,7 @@
   font-family: 'IM Fell French Canon SC', serif;
   font-size: 5em;
   color: $pure-white;
-  text-shadow: $text-shadow;
+  // text-shadow: $text-shadow;
 }
 
 .header-subtitle {
@@ -27,7 +27,7 @@
   position: absolute;
   text-align: center;
   color: $pure-white;
-  text-shadow: $text-shadow;
+  // text-shadow: $text-shadow;
   top: 8%;
   left: 42.9%;
 }
@@ -40,7 +40,7 @@
 #periods-link {
   position: absolute;
   color: $pure-white;
-  text-shadow: $text-shadow;
+  // text-shadow: $text-shadow;
   top: 1.3%;
   left: 4%;
   text-decoration: none;
@@ -49,7 +49,7 @@
 #about-link {
   position: absolute;
   color: $pure-white;
-  text-shadow: $text-shadow;
+  // text-shadow: $text-shadow;
   top: 1.3%;
   right: 5%;
   text-decoration: none;
