--- a/client/src/styles/containers/_home.scss
+++ b/client/src/styles/containers/_home.scss
@@ -4,7 +4,9 @@
   left: -50%;
   width: 200%;
   height: 200%;
+  color: $navy-blue;
   z-index: -1;
+  opacity: .6;
 }
 
 #bg img {
@@ -23,13 +25,13 @@
   font-family: 'Crimson Text', serif;
   font-style: italic;
   color: $pure-white;
-  text-shadow: $text-shadow;
+  // text-shadow: $text-shadow;
 }
 
 #painting-name {
   position:absolute;
   bottom: 6.2%;
-  left: 33%;
+  left: 30%;
   font-size: 5em;
   z-index: 2;
 }
