--- a/client/src/styles/containers/_periodList.scss
+++ b/client/src/styles/containers/_periodList.scss
@@ -1,5 +1,5 @@
 .list-wrapper {
-  background: $off-white;
+  background: $navy-blue;
   position: absolute;
   top: 10.5%;
   bottom: 0;
@@ -8,6 +8,6 @@
   overflow: hidden;
 }
 
-.list-wrapper:nth-child(2) {
+.list-wrapper:nth-child(1) {
   background: red;
 }
